<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="?android:attr/windowBackground"
>
    <Button
            android:text="@string/reset"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="?attr/colorOnSecondary"
            android:layout_width="198dp"
            android:elevation="10dp"
            android:padding="5dp"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_height="50dp"
            android:id="@+id/resetButton"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="88dp" android:fontFamily="@font/inter_semibold"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/app_name"
            android:textColor="?attr/titleTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.089" android:fontFamily="@font/inter_semibold"
            android:textSize="34sp"/>

    <ImageView
            android:layout_width="266dp"
            android:layout_height="297dp"
            android:id="@+id/uploadedImage"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="50dp"
            android:padding="@dimen/screenshot_padding" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.372"/>
    <Button
            android:text="@string/upload_screenshot_button"
            android:backgroundTint="?attr/colorAccent"
            android:textColor="?attr/colorOnSecondary"
            android:layout_width="wrap_content"
            android:elevation="10dp"
            android:padding="20dp"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_height="70dp"
            android:id="@+id/uploadButton"
            app:layout_constraintTop_toBottomOf="@+id/uploadedImage"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.717"
            android:layout_marginBottom="88dp" android:fontFamily="@font/inter_semibold"/>
    <androidx.cardview.widget.CardView
            android:layout_width="363dp"
            android:layout_height="61dp"
            android:padding="@dimen/cardview_padding"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/primary"
            app:contentPadding="5dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toTopOf="@+id/uploadedImage"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/cardView">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

            <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/what_to_do"
                    android:textColor="?attr/titleTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.109" app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:textSize="15sp"
                    android:textColor="?attr/titleTextColor"
                    android:text="@string/app_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.228"
                    app:layout_constraintVertical_bias="0.944"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/api_response_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/api_response_view"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadedImage"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toTopOf="@+id/resetButton"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/uploadedImage"/>

</androidx.constraintlayout.widget.ConstraintLayout>